...
                    label: 'Load Avocado (GLB)',
                    onPressed: cubit.loadAssetGlb,
                  ),
                  modelButton(
                    id: DemoModelId.boomBoxGltf,
                    icon: Icons.music_note,
                    label: 'Load BoomBox (glTF)',
                    onPressed: cubit.loadAssetGltf,
                  ),
                  modelButton(
                    id: DemoModelId.boxTexturedUrl,
                    icon: Icons.cloud_download,
                    label: 'Load BoxTextured URL',
...
              SwitchListTile.adaptive(
                title: const Text('Environment (Skybox)'),
                value: state.environmentEnabled,
                onChanged: cubit.setEnvironmentEnabled,
              ),
              SwitchListTile.adaptive(
                title: const Text('Wireframe'),
                value: state.wireframeEnabled,
                onChanged: cubit.setWireframeEnabled,
              ),
              SwitchListTile.adaptive(
                title: const Text('Bounding boxes'),
                value: state.boundingBoxesEnabled,
                onChanged: cubit.setBoundingBoxesEnabled,
              ),
              SwitchListTile.adaptive(
                title: const Text('Debug logging'),
                value: state.debugLoggingEnabled,
...
